@@ -54,6 +54,11 @@ Enhancements from 1.2
 - NameFileFilter
   - Ability to control case-sensitivity
 
+- FileFileFilter
+  - New IOFileFilter implementation
+  - Accepts files where File.isFile() is true
+  - In other words it filters out directories
+
 - CanReadFileFilter
   - New IOFileFilter implementation
   - Accepts files where File.canRead() is true
